--- a/assets/sass/import/_variables.scss
+++ b/assets/sass/import/_variables.scss
@@ -1,7 +1,7 @@
 // Font Sizes
 $base-font-size: 16px;
 $em-base: $base-font-size;
-$base-font-family: 'Roboto', sans-serif;
+$base-font-family: 'Raleway', sans-serif;
 $heading-font-family: $base-font-family;
 
 // font weight
@@ -16,7 +16,7 @@ $f-thin: 200; // 200 Light or Thin
 $f-ulight: 100; // 100 Extra Light or Ultra Light
 
 // Line height
-$base-line-height: 1.5;
+$base-line-height: 1;
 $heading-line-height: 1.2;
 
 // Other Sizes
@@ -31,7 +31,7 @@ $base-z-index: 0;
 // Colors
 $orange: orange;
 $red: red;
-$blue: #477dca;
+$blue: #0057a1;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
