--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -133,6 +133,7 @@ footer {
 
 
 @import 'fonts/font_fontawesome';
-@import 'fonts/font_roboto';
+@import 'fonts/font_acrom';
+@import 'fonts/font_raleway';
 @import 'base64';
 @import 'import/print';
