--- a/assets/sass/_sprite.scss
+++ b/assets/sass/_sprite.scss
@@ -12,21 +12,32 @@ At the bottom of this section, we provide information about the spritesheet itse
 $spritesheet: width height image $spritesheet-sprites;
 */
 $sprite-blank-name: 'sprite-blank';
-$sprite-blank-x: 0px;
+$sprite-blank-x: 1px;
 $sprite-blank-y: 0px;
-$sprite-blank-offset-x: 0px;
+$sprite-blank-offset-x: -1px;
 $sprite-blank-offset-y: 0px;
 $sprite-blank-width: 1px;
 $sprite-blank-height: 1px;
-$sprite-blank-total-width: 1px;
-$sprite-blank-total-height: 1px;
+$sprite-blank-total-width: 2px;
+$sprite-blank-total-height: 13px;
 $sprite-blank-image: '../img/sprite.png';
-$sprite-blank: (0px, 0px, 0px, 0px, 1px, 1px, 1px, 1px, '../img/sprite.png', 'sprite-blank', );
-$spritesheet-width: 1px;
-$spritesheet-height: 1px;
+$sprite-blank: (1px, 0px, -1px, 0px, 1px, 1px, 2px, 13px, '../img/sprite.png', 'sprite-blank', );
+$sprite-headnav-container-li-name: 'sprite-headnav-container-li';
+$sprite-headnav-container-li-x: 0px;
+$sprite-headnav-container-li-y: 0px;
+$sprite-headnav-container-li-offset-x: 0px;
+$sprite-headnav-container-li-offset-y: 0px;
+$sprite-headnav-container-li-width: 1px;
+$sprite-headnav-container-li-height: 13px;
+$sprite-headnav-container-li-total-width: 2px;
+$sprite-headnav-container-li-total-height: 13px;
+$sprite-headnav-container-li-image: '../img/sprite.png';
+$sprite-headnav-container-li: (0px, 0px, 0px, 0px, 1px, 13px, 2px, 13px, '../img/sprite.png', 'sprite-headnav-container-li', );
+$spritesheet-width: 2px;
+$spritesheet-height: 13px;
 $spritesheet-image: '../img/sprite.png';
-$spritesheet-sprites: ($sprite-blank, );
-$spritesheet: (1px, 1px, '../img/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($sprite-blank, $sprite-headnav-container-li, );
+$spritesheet: (2px, 13px, '../img/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
