--- a/assets/sass/import/_variables.scss
+++ b/assets/sass/import/_variables.scss
@@ -34,6 +34,7 @@ $orange: orange;
 $red: red;
 $blue: #0057a1;
 $darkblue: darken($blue, 10%);
+$lightblue: #0074d7;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
