--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -53,6 +53,22 @@ a {
     outline: none;
   }
 }
+.btn,
+button {
+  font-size: 13px;
+  font-weight: normal;
+
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  background-color: $lightblue;
+  &:hover {
+    text-decoration: none;
+
+    background-color: $darkblue;
+  }
+}
 hr {
   margin: $base-spacing 0;
 
@@ -85,10 +101,12 @@ picture {
 }
 header {
   position: relative;
+  z-index: 0;
 
   height: 548px;
-
-  background-color: $light-gray;
+  .row {
+    height: 548px;
+  }
   &:before,
   &:after {
     position: absolute;
@@ -266,6 +284,127 @@ header {
       background-color: transparent;
       &:hover {
         background-color: $darkblue;
+      }
+    }
+  }
+  .header__title {
+    font-family: 'Raleway';
+    font-size: 48px;
+    font-weight: bold;
+
+    margin: 0 0 30px;
+    padding: 80px 0 0;
+
+    text-align: justify;
+    text-transform: uppercase;
+
+    color: #fff;
+    a {
+      text-decoration: none;
+
+      color: #fff;
+    }
+  }
+  .header-slider {
+    position: relative;
+
+    padding: 0 185px 0 0;
+
+    color: #fff;
+    .header-slider__title {
+      font-size: 38px;
+      font-weight: 300;
+
+      margin: 0;
+
+      text-transform: uppercase;
+    }
+    .header-slider__description {
+      font-family: 'Raleway';
+      font-size: 21px;
+      font-weight: 300;
+      line-height: 1.5;
+    }
+    .header-slider__more {
+      position: absolute;
+      top: 8px;
+      right: 0;
+    }
+  }
+  .header-slider__fullsize {
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    height: 456px;
+
+    background-image: url(../img/content/slider-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .header-search {
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+
+    height: 160px;
+    padding: 40px 0 0;
+    form {
+      position: relative;
+
+      width: 100%;
+      margin: 0 0 20px;
+      input {
+        margin: 0;
+        padding: 10px 50px 10px 10px;
+      }
+      button {
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        width: 41px;
+        height: 41px;
+        margin: 0;
+
+        border-radius: 0 $base-border-radius $base-border-radius 0;
+        background-image: url(../img/base64/header-gosearch__button.png);
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    }
+    p {
+      font-size: 18px;
+      font-weight: bold;
+
+      color: #fff;
+      .quick {
+        font-family: 'Raleway';
+        font-size: 18px;
+        font-weight: 300;
+
+        margin: 0 0 0 5px;
+
+        opacity: .7;
+        &:after {
+          content: ', ';
+        }
+        &:hover {
+          opacity: 1;
+        }
+        &:last-child {
+          &:after {
+            display: none;
+          }
+        }
+      }
+      .dotted {
+        cursor: pointer;
+
+        border-bottom: 1px dotted #fff;
       }
     }
   }
