.article__popular-services

--- a/assets/sass/import/_variables.scss
+++ b/assets/sass/import/_variables.scss
@@ -35,6 +35,7 @@ $red: red;
 $blue: #0057a1;
 $darkblue: darken($blue, 10%);
 $lightblue: #0074d7;
+$gray: #f6f6f6;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
