--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -20,6 +20,28 @@ body {
   background-color: $base-background-color;
 
   -webkit-font-smoothing: antialiased;
+  &.home {
+    header {
+      height: 548px;
+
+      border-bottom: 0;
+      background-color: transparent;
+      &:after {
+        display: block;
+      }
+      .row {
+        height: 548px;
+      }
+      .header__title,
+      .header-slider,
+      .header-search {
+        display: block;
+      }
+      .header-slider__fullsize {
+        display: block;
+      }
+    }
+  }
 }
 h1,
 h2,
@@ -103,9 +125,12 @@ header {
   position: relative;
   z-index: 0;
 
-  height: 548px;
+  height: 134px;
+
+  border-bottom: 1px solid #eee;
+  background-color: #fcfcfc;
   .row {
-    height: 548px;
+    height: 134px;
   }
   &:before,
   &:after {
@@ -124,6 +149,8 @@ header {
   }
   &:after {
     bottom: 0;
+
+    display: none;
 
     height: 160px;
 
@@ -294,6 +321,8 @@ header {
     font-size: 48px;
     font-weight: bold;
 
+    display: none;
+
     margin: 0 0 30px;
     padding: 80px 0 0;
 
@@ -309,6 +338,8 @@ header {
   }
   .header-slider {
     position: relative;
+
+    display: none;
 
     padding: 0 185px 0 0;
 
@@ -340,6 +371,8 @@ header {
     bottom: 0;
     left: 0;
 
+    display: none;
+
     height: 456px;
 
     background-image: url(../img/content/slider-bg.png);
@@ -351,6 +384,8 @@ header {
     position: absolute;
     z-index: 1;
     bottom: 0;
+
+    display: none;
 
     height: 160px;
     padding: 40px 0 0;
@@ -420,12 +455,150 @@ nav {
     }
   }
 }
+.breadcrumbs {
+  font-size: 13px;
 
+  padding: 13px 0 0;
+  a {
+    text-decoration: underline;
+
+    color: #5f5f5f;
+  }
+  .current {
+    text-transform: uppercase;
+  }
+}
 section {
   padding: 0 0 $footer;
 }
 article {
   @extend .clearfix;
+  .inner-title {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.2;
+
+    margin: 0 0 20px;
+
+    text-transform: uppercase;
+  }
+  &.type-post {
+    .col-md-12 {
+      line-height: 1.4;
+
+      padding: 25px 0;
+    }
+    ul,
+    ol {
+      padding: 10px 0;
+      li {
+        margin-bottom: 10px;
+        &:before {
+          display: none;
+        }
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+      ul,
+      ol {
+        padding-left: 20px;
+      }
+    }
+    ul {
+      list-style-type: lower-alpha;
+    }
+    ol {
+      list-style-type: decimal;
+    }
+    img {
+      width: 100%;
+      margin: 0 0 25px;
+    }
+    h2,
+    h3,
+    h4,
+    h5 {
+      font-weight: bold;
+    }
+    h2 {
+      font-size: 180%;
+    }
+    h3 {
+      font-size: 160%;
+    }
+    h4 {
+      font-size: 140%;
+    }
+    h5 {
+      font-size: 130%;
+    }
+    h6 {
+      font-size: 120%;
+    }
+    table {
+      width: 100%;
+      margin: 0 0 20px;
+
+      border-collapse: collapse;
+
+      border: 1px solid #000;
+      td,
+      th {
+        padding: 10px;
+
+        border: 1px solid #000;
+      }
+      th {
+        font-size: 16px;
+        font-weight: normal;
+
+        color: #fff;
+        background-color: #484848;
+      }
+      td {
+        font-size: 14px;
+      }
+    }
+    blockquote {
+      margin: 0 0 25px;
+      padding: 30px;
+
+      border-left: 5px solid #dfdfdf;
+      background-color: #fcfcfc;
+      p {
+        font-size: 14px;
+        font-style: italic;
+        line-height: 1.8;
+        &:first-child {
+          &:before {
+            display: inline-block;
+
+            width: 14px;
+            height: 10px;
+            margin: 0 12px 0 0;
+
+            content: '';
+
+            background-image: url(../img/base64/blockquote-before.png);
+          }
+        }
+        &:last-child {
+          &:after {
+            display: inline-block;
+
+            width: 14px;
+            height: 10px;
+            margin: 0 0 0 12px;
+
+            content: '';
+
+            background-image: url(../img/base64/blockquote-after.png);
+          }
+        }
+      }
+    }
+  }
 }
 .article-workvectors {
   font-family: 'Raleway';
@@ -539,6 +712,7 @@ article {
     p {
       font-size: 16px;
       font-weight: 300;
+      line-height: 1.3;
     }
     &:hover {
       color: $lightblue;
@@ -682,7 +856,8 @@ article {
     .article__popnews-newitem-text {
       overflow: hidden;
 
-      height: 68px;
+      height: 62px;
+      margin-bottom: 5px;
     }
     p {
       line-height: 1.4;
