--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -45,6 +45,9 @@ body {
   &.page-template-page-services {
     background-color: #f6f6f6;
   }
+  &.modaled {
+    /* overflow: hidden; */
+  }
 }
 h1,
 h2,
@@ -1206,6 +1209,65 @@ footer {
     span {
       font-size: 16px;
       font-weight: bold;
+    }
+  }
+}
+.vmodal-bg {
+  position: fixed;
+  z-index: 15;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  display: none;
+
+  padding-top: 93px;
+
+  background-color: rgba(0, 0, 0, .3);;
+  .vmodal {
+    position: relative;
+
+    padding: 40px;
+
+    border-radius: $base-border-radius;
+    background-color: #fff;
+    h6 {
+      font-size: 24px;
+      font-weight: bold;
+
+      margin: 0 0 10px;
+
+      text-align: center;
+      text-transform: uppercase;
+
+      color: $blue;
+    }
+    input,
+    textarea {
+      margin: 0 0 10px;
+      padding: 10px;
+
+      border: 1px solid #000;
+    }
+    button {
+      width: 100%;
+      margin: 0;
+
+      color: #fff;
+    }
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+
+      width: 13px;
+      height: 13px;
+
+      cursor: pointer;
+
+      background-image: url(../img/icons/ico-close.png);
+      background-repeat: no-repeat;
     }
   }
 }
