header navi ready

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -471,8 +471,6 @@ header {
       left: 0;
 
       height: 456px;
-
-
     }
   }
   .header-search {
@@ -888,7 +886,6 @@ article {
       line-height: 1;
 
       position: relative;
-      position: relative;
 
       height: 83px;
       margin: 0;
@@ -915,7 +912,7 @@ article {
     &:nth-child(6),
     &:nth-child(7),
     &:nth-child(8) {
-      margin-bottom: 20px;
+      /* margin-bottom: 20px; */
     }
   }
   .popular-services__more {
@@ -1448,6 +1445,112 @@ footer {
     }
   }
 }
+.header-subnavi {
+  position: absolute;
+  z-index: 70;
+  top: 92px;
+  right: 0;
+  left: 0;
+
+  display: none;
+
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  background-color: #fff;
+  .container {
+    position: relative;
+    &:before {
+      position: absolute;
+      top: -30px;
+
+      @extend .dblock;
+      @include triangle(30px 18px, $blue, down);
+    }
+  }
+  .header-subnavi__title {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.8;
+
+    margin: 0 0 20px;
+    padding: 0 15px 0 0;
+
+    color: $blue;
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      position: relative;
+
+      height: 55px;
+      margin: 0;
+      padding: 15px 5px 15px 50px;
+      img {
+        position: absolute;
+        top: -10px;
+        left: -50px;
+
+        width: 35px;
+      }
+      a {
+        font-size: 17px;
+
+        position: relative;
+
+        display: block;
+
+        width: 100%;
+        height: 100%;
+
+        text-decoration: none;
+
+        color: $blue;
+      }
+      span {
+        position: absolute;
+        top: 40%;
+
+        transform: translateY(-50%);
+      }
+      &:hover {
+        background-color: #f3f3f3;
+      }
+    }
+  }
+  &.header-subnavi-opened {
+    display: block;
+  }
+}
+.header-subnavi-first {
+  .container {
+    &:before {
+      left: 250px;
+    }
+  }
+}
+.header-subnavi-second {
+  .container {
+    h6 {
+      display: none;
+    }
+    &:before {
+      left: 395px;
+    }
+  }
+}
+.header-subnavi-third {
+  .container {
+    h6 {
+      display: none;
+    }
+    &:before {
+      left: 645px;
+    }
+  }
+}
+
 
 
 @import 'fonts/font_fontawesome';
