--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -289,8 +289,11 @@ header {
 
     text-align: center;
     .header-gosearch__button {
+      display: block;
+
       width: 20px;
       height: 20px;
+      margin: 0 auto;
 
       opacity: .9;
       background-color: transparent;
@@ -1296,6 +1299,94 @@ article {
   }
 }
 
+.search-page {
+  .search-title {
+    font-size: 40px;
+    font-weight: bold;
+
+    padding: 30px 0 0 !important;
+
+    text-transform: uppercase;
+  }
+  .header-search {
+    z-index: 1;
+
+    height: 120px;
+    padding: 0 !important;
+
+    color: #000;
+    form {
+      position: relative;
+
+      width: 100%;
+      margin: 0 0 20px;
+      input {
+        margin: 0;
+        padding: 10px 50px 8px 10px;
+
+        border: 2px solid $blue;
+      }
+      button {
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        width: 41px;
+        height: 41px;
+        margin: 0;
+
+        border-radius: 0 $base-border-radius $base-border-radius 0;
+        background-image: url(../img/base64/header-gosearch__button.png);
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    }
+    p {
+      font-size: 18px;
+      font-weight: bold;
+
+      color: #000;
+      .quick {
+        font-family: 'Raleway';
+        font-size: 18px;
+        font-weight: 300;
+
+        margin: 0 0 0 5px;
+
+        opacity: .7;
+        color: $lightblue;
+        &:after {
+          content: ', ';
+        }
+        &:hover {
+          opacity: 1;
+        }
+        &:last-child {
+          &:after {
+            display: none;
+          }
+        }
+      }
+      .dotted {
+        cursor: pointer;
+
+        border-bottom: 1px dotted $lightblue;
+      }
+    }
+  }
+  .looper-search {
+    margin: 0 0 10px;
+    padding: 0;
+    a {
+      font-size: 17px;
+      font-weight: bold;
+
+      display: block;
+
+      margin: 0 0 5px;
+    }
+  }
+}
 
 footer {
   position: relative;
